# digiwf-okewo-integration-service/src/main/java/io/muenchendigital/digiwf/okewo/integration/api/streaming/OkEwoStreamingEventListener.java
@@ -2,6 +2,7 @@ package io.muenchendigital.digiwf.okewo.integration.api.streaming;
 
 import io.muenchendigital.digiwf.okewo.integration.api.dto.OkEwoErrorDto;
 import io.muenchendigital.digiwf.okewo.integration.api.dto.OrdnungsmerkmalDto;
+import io.muenchendigital.digiwf.okewo.integration.gen.model.BenutzerType;
 import io.muenchendigital.digiwf.okewo.integration.gen.model.Person;
 import io.muenchendigital.digiwf.okewo.integration.gen.model.PersonErweitert;
 import io.muenchendigital.digiwf.okewo.integration.gen.model.SuchePersonAnfrage;
@@ -13,6 +14,7 @@ import io.muenchendigital.digiwf.okewo.integration.repository.OkEwoPersonReposit
 import io.muenchendigital.digiwf.spring.cloudstream.utils.api.streaming.service.CorrelateMessageService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.messaging.Message;
 
@@ -31,6 +33,9 @@ public class OkEwoStreamingEventListener {
 
     private final OkEwoPersonErweitertRepository okEwoPersonErweitertRepository;
 
+    @Value("${io.muenchendigital.digiwf.okewo.benutzerId}")
+    private String benutzerId;
+
     /**
      * The Consumer expects an {@link OrdnungsmerkmalDto} which represents an "om" for OK.EWO.
      * <p>
@@ -47,7 +52,7 @@ public class OkEwoStreamingEventListener {
 
             Object ewoResult;
             try {
-                ewoResult = this.okEwoPersonRepository.getPerson(ordnungsmerkmal.getOm());
+                ewoResult = this.okEwoPersonRepository.getPerson(ordnungsmerkmal.getOm(), this.benutzerId);
             } catch (final Exception exception) {
                 ewoResult = new OkEwoErrorDto(exception.getMessage());
             }
@@ -72,6 +77,9 @@ public class OkEwoStreamingEventListener {
             log.debug(message.toString());
 
             final SuchePersonAnfrage suchePersonAnfrage = message.getPayload();
+            final BenutzerType benutzerType = new BenutzerType();
+            benutzerType.setBenutzerId(this.benutzerId);
+            suchePersonAnfrage.setBenutzer(benutzerType);
 
             Object ewoResult;
             try {
@@ -103,7 +111,7 @@ public class OkEwoStreamingEventListener {
 
             Object ewoResult;
             try {
-                ewoResult = this.okEwoPersonErweitertRepository.getPerson(ordnungsmerkmal.getOm());
+                ewoResult = this.okEwoPersonErweitertRepository.getPerson(ordnungsmerkmal.getOm(), this.benutzerId);
             } catch (final Exception exception) {
                 ewoResult = new OkEwoErrorDto(exception.getMessage());
             }
@@ -128,6 +136,9 @@ public class OkEwoStreamingEventListener {
             log.debug(message.toString());
 
             final SuchePersonerweitertAnfrage suchePersonerweitertAnfrage = message.getPayload();
+            final BenutzerType benutzerType = new BenutzerType();
+            benutzerType.setBenutzerId(this.benutzerId);
+            suchePersonerweitertAnfrage.setBenutzer(benutzerType);
 
             Object ewoResult;
             try {
